First pass algolia search

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -4,6 +4,7 @@
 <script src="/docs/assets/js/node_modules/angular-material/angular-material.min.js"></script>
 <script src="/docs/assets/js/node_modules/angular-animate/angular-animate.min.js"></script>
 <script src="/docs/assets/js/node_modules/angular-aria/angular-aria.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" /> 
 {% if page.terminuspage %}
   <script type="text/javascript">
     function setActivetrail() {
